rip graal